correct li spacing

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   flex-direction: row;
   justify-content: space-around;
   list-style-type: none;
+  padding-left: 0;
 }
 
 
